--- a/clase1-Variables.html
+++ b/clase1-Variables.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>  
-        <script src="clase1.js"></script>
+        <script src="clase1-Variables.js"></script>
     </body>
 
 </html>
