--- a/clase2-Strings.html
+++ b/clase2-Strings.html
@@ -6,7 +6,7 @@
     </head>
 
     <body>  
-        <script src="clase2.js"></script>
+        <script src="clase2-Strings.js"></script>
     </body>
 
 </html>
