Hasta la clase 7

--- a/clase3-Numeros.html
+++ b/clase3-Numeros.html
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
     <head>  
         <meta charset="utf-8">
-        <title> Clase 1 - STRINGS</title>  
+        <title> Clase 3 - Numeros</title>  
     </head>
 
     <body>  
-        <script src="clase2-Strings.js"></script>
+        <script src="clase3-Numeros.js"></script>
     </body>
-
 </html>
