--- a/clase4-Funciones.html
+++ b/clase4-Funciones.html
@@ -2,11 +2,10 @@
 <html lang="en" dir="ltr">
     <head>  
         <meta charset="utf-8">
-        <title> Clase 1 - STRINGS</title>  
+        <title> Clase 4 - Funciones </title>  
     </head>
 
     <body>  
-        <script src="clase2-Strings.js"></script>
-    </body>
-
+        <script src="clase4-Funciones.js"></script>
+    </body> 
 </html>
