--- a/clase21-Prototipos.html
+++ b/clase21-Prototipos.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
     <head>  
         <meta charset="utf-8">
-        <title> Clase 14- Loop While </title>  
+        <title> Clase 21 - Prototipos </title>  
     </head>
 
     <body>  
-        <script src="clase17-Array.js"></script>
+        <script src="clase21-Prototipos.js"></script>
     </body> 
 </html> 
