--- a/clase18-FiltraArray.html
+++ b/clase18-FiltraArray.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
     <head>  
         <meta charset="utf-8">
-        <title> Clase 14- Loop While </title>  
+        <title> Clase 18- Filtrar Array </title>  
     </head>
 
     <body>  
-        <script src="clase17-Array.js"></script>
+        <script src="clase18-FiltraArray.js"></script>
     </body> 
 </html> 
