--- a/clase20-ReduceArray.html
+++ b/clase20-ReduceArray.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
     <head>  
         <meta charset="utf-8">
-        <title> Clase 14- Loop While </title>  
+        <title> Clase 20- Reduce Array </title>  
     </head>
 
     <body>  
-        <script src="clase17-Array.js"></script>
+        <script src="clase20-ReduceArray.js"></script>
     </body> 
 </html> 
